<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.baec.vocabularyquiz.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_addWord"
        android:name="com.baec.vocabularyquiz.main.ui.addword.AddWordFragment"
        android:label="@string/menu_addword"
        tools:layout="@layout/fragment_addword" />

    <fragment
        android:id="@+id/nav_playQuiz"
        android:name="com.baec.vocabularyquiz.main.ui.playquiz.PlayQuizFragment"
        android:label="@string/menu_playquiz"
        tools:layout="@layout/fragment_quiz" />
</navigation>